crates/iroha_smart_contract_derive/tests/ui/fail/main_with_return.stderr
error: Smart contract entrypoint must not have a return type
 --> tests/ui/fail/main_with_return.rs:5:1
  |
5 | #[main]
  | ^^^^^^^
  |
  = note: this error originates in the attribute macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `main` has invalid return type `i32`
 --> tests/ui/fail/main_with_return.rs:6:43
  |
6 | fn main(host: Iroha, context: Context) -> i32 {
  |                                           ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

error[E0308]: mismatched types
 --> tests/ui/fail/main_with_return.rs:5:1
  |
5 | #[main]
  | ^^^^^^^- help: try adding a return type: `-> i32`
  | |
  | expected `()`, found `i32`
  |
  = note: this error originates in the attribute macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
